Bug 1773783 - Fix recipients line height for mixed characters and imip bar buttons spacing. r=Paenglab a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D148960

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -450,6 +450,7 @@ button.email-action-button:focus-visible {
   user-select: text;
   word-wrap: anywhere;
   display: inherit;
+  line-height: 1.3;
 }
 
 .screen-reader-only {
